# nvapiServer

./: .gitattributes  nvapiServer.sln
nvapiServer/: CMakeLists.txt  nvapiServer.vcxproj  nvapiServer.vcxproj.filters
nvapiServer/include/: crowServer.h  d2dHelper.h  global.h  nvapiHelper.h  overlayManager.h
nvapiServer/src/: crowServer.cpp  d2dHelper.cpp  global.cpp  main.cpp  nvapiHelper.cpp  overlayManager.cpp
